Fix question spacing on smaller screens

--- a/retirement_api/static/css/claiming.css
+++ b/retirement_api/static/css/claiming.css
@@ -183,7 +183,7 @@ form {
 
 #claiming-social-security #graph-container .content-l_col {
   margin-top: 0px;
-  padding: 45px 0;
+  padding: 45px 0 60px 0;
 }
 
 #claiming-social-security .step-one .content-l_col {
@@ -585,21 +585,33 @@ form {
   }
 
   #claiming-social-security .content-l.step-two {
-    margin-top: 30px;
+    margin-top: 0;
+  }
+
+  #claiming-social-security .content-l.step-two h2 {
+    margin-bottom: 30px;
+  }
+
+  #claiming-social-security .content-l.step-two h2 + .question.h3 {
+    margin-bottom: 30px;
   }
 
   #claiming-social-security div.question {
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
     border-left: none;
     border-right: none;
     margin-right: 25px;
-    margin-bottom: 2em;
     margin-left: 15px;
-    padding-bottom: 2em;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  #claiming-social-security div.question.question-married {
+    border-top: none;
   }
 
   #claiming-social-security div.question.question-longevity {
-    border-bottom: none;
+    padding-bottom: 10px;
   }
 
   #claiming-social-security .question:before,
@@ -627,6 +639,11 @@ form {
   #claiming-social-security .step-two .lifestyle-question_container,
   #claiming-social-security .step-two .lifestyle-response {
     margin-left: 230px;
+  }
+
+  #claiming-social-security .content-l.step-two + hr {
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 }
 
@@ -684,8 +701,12 @@ form {
     max-width: 236px;
   }
 
-  #claiming-social-security .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+  #claiming-social-security #step-one-form .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
     margin-top: 1.875em;
+  }
+
+  #claiming-social-security .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3 {
+    margin-top: 0;
   }
 
   #claiming-social-security .birthdate-inputs p,
@@ -740,53 +761,50 @@ form {
     padding-right: 20px;
   }
 
-  #claiming-social-security #graph-container + hr {
-    display: none;
-  }
-
-  #claiming-social-security .step-two > .content-l_col-1-3:first-child {
-    border-top: 1px solid #ccc;
-    margin: 0 -20px;
-    padding: 20px 20px 0 20px;
-  }
-
-  #claiming-social-security .step-two + .step-two {
+  #claiming-social-security .content-l.step-two {
     margin-top: 0;
   }
 
-  #claiming-social-security .step-two div.question {
-    border-top: 1px solid #ccc;
+  #claiming-social-security .content-l.step-two h2 {
+    margin-bottom: 0;
   }
 
-  #claiming-social-security .question hr {
+  #claiming-social-security .question {
+    border-bottom: 1px solid #ccc;
+    padding-top: 30px;
+  }
+
+  #claiming-social-security .lifestyle-question_container hr {
     display: none;
   }
 
   #claiming-social-security .step-two .lifestyle-img {
     display: inline-block;
-    margin: 20px 0;
+    margin-top: 0;
+    margin-bottom: 15px;
     max-width: 200px;
   }
 
-  #claiming-social-security [data-answered] h3 {
-    margin-top: 1em;
+  #claiming-social-security .content-l.step-two h2 + .question.h3 {
+    border-bottom: none;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    padding-top: 0;
   }
 
-  #claiming-social-security .question {
-    margin-top: 1.875em !important;
+  #claiming-social-security .question.question-married {
+    border-top: none;
+    padding-top: 0;
   }
 
   #claiming-social-security .question-longevity {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 1.875em;
+    border-bottom: none;
   }
 
-  #claiming-social-security .step-two + hr {
-    display: none;
-  }
-
-  #claiming-social-security .step-three {
-    margin-top: 1.875em;
+  #claiming-social-security hr.before-step-two,
+  #claiming-social-security .content-l.step-two + hr {
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
